# waveshare-hmi

./: .gitignore  .gitmessage.txt  README.md  sdkconfig.defaults  utils.md
main/: CMakeLists.txt  Kconfig  lvgl_lock_shim.c  lvgl_lock_shim.h  lvgl_port.h  main.c  main.cpp  ui.c  ui.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/ui/: ui_menu_mcr50.cpp  ui_menu_mcr50.h  ui_menu_mcr50_json.cpp  ui_menu_mcr50_json.h  ui_pin.cpp  ui_pin.h  ui_router.cpp  ui_router.h  ui_screens.cpp  ui_screens.h
main/ui/widgets_reusable/: widget_slider.cpp  widget_slider.h
